# PrinterSDK

./: LICENSE  README.md  setup.cfg  setup.py
PrinterSDK/: __init__.py
PrinterSDK/connection/: ConnectionBase.py  ConnectionTCP.py  __init__.py
scripts/: dist.sh
src/: printer.py
src/connection/: ConnectionTCP.py
tests/: __init__.py  testConnection.py
