[metadata]
name = PrinterSDK
version = 0.0.2
author = Nikz
author_email = nicholas_zww@yahoo.com
description = This a python SDK package for Honeywell Fiji printers
long_description = file: README.md
long_description_content_type = text/markdown
url = package url
project_urls =
    Source = https://github.com/nicholas-zww/PrinterSDK
    Bug Tracker = https://github.com/nicholas-zww/PrinterSDK/issues
    Documentation = https://github.com/nicholas-zww/PrinterSDK/docs
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = PrinterSDK
packages = find:
python_requires = >=3.6

[options.packages.find]
where = PrinterSDK

